--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Opixelum/MyPortfolio#readme",
   "dependencies": {
+    "animejs": "^3.2.1",
     "express": "^4.17.2",
     "nodemailer": "^6.7.2"
   },
