--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Opixelum/MyPortfolio.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Opixelum",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Opixelum/MyPortfolio/issues"
